- Fixed win conditions. Thought they were complete but were only working   for winning horizontal combinations. - Added a Get Game ID form. Not functional. - Created clearBoard function. Tried to link it to new game button but was   unsuccessful. - Updated new-game button ID selector in scss. - Fixed some spacing errors.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -40,3 +40,8 @@ body {
 .navbar-right {
   margin: 18px;
 }
+
+#new-game-button {
+  display: block;
+  margin: 50px auto;
+}
